# song-creator

./: .claude.json  load-env.sh
mcp-suno/: pyproject.toml  server.py
skills/suno-lyrics/: SKILL.md
skills/suno-lyrics/bands/: README.md  _template.md  ed-sheeran.md
skills/suno-lyrics/evals/: evals.json
